# quant

./: AGENTS.md  API.md  BACKTEST.md  CONTEXT_FACTORS.md  FACTORS.md  FEATURES.md  PATTERNS.md  PRIORITY_COMBINATIONS.md  pyproject.toml
backtest/: __init__.py  anchor_outcomes.py
config/: supabase.json  symbols.json
core/: __init__.py  base.py  models.py  timeframes.py
data/: __init__.py  binance_futures.py  candle_cache.py  candles.py  market_config.py  market_data_service.py  run_collector.py  schema.sql  supabase_schema.py  supabase_store.py  validation.py
factors/: __init__.py  context_factors.py  pattern_context.py  pattern_factors.py  priority_combinations.py  support_confluence.py  support_lineage.py  trade_feasibility.py  triangle_context.py
features/: __init__.py  basic.py  context.py  ema_rejection.py  pattern_lineage.py  priority_combinations.py  priority_level_context.py  priority_profiles.py  trade_feasibility.py  trade_plan.py  triangle_context.py
indicators/: __init__.py  atr.py  ema.py  swing.py
patterns/: __init__.py  ascending_triangle.py  detector.py  head_shoulders_top.py  horizontal_resistance.py  horizontal_support.py  horizontal_support_candidates.py  inverse_head_shoulders.py  support_levels.py  three_point_trendline_resistance.py  three_point_trendline_support.py  trendline_support.py  triangle.py  triangle_contacts.py  triangle_geometry.py  triangle_validation.py
price_action_quant_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research/: __init__.py  anchor_trade_report.py  pattern_dedup.py  (+6 more)
(+51 files in other folders)
